--- a/Desktop/react/styling-react/src/App.css
+++ b/Desktop/react/styling-react/src/App.css
@@ -4,7 +4,7 @@
 
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
+  animation: App-logo-spin infinite 20s linear;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+.App header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,7 +24,7 @@
   color: white;
 }
 
-.App-link {
+.App a {
   color: #61dafb;
 }
 
